# raylib-build-template

./: .gitignore  CMakeLists.txt  README.md  android-build.sh
src/: CMakeLists.txt  main.c
